--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -82,8 +82,7 @@
                         width="600"
                         height="400"
                         frameborder="0" style="..."
-                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB8G1i2Hwt_PIhC7LtRnBWQolyXhPbtjZE
-    &q={{map_address}}" allowfullscreen>
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB8G1i2Hwt_PIhC7LtRnBWQolyXhPbtjZE&q={{map_address}}" allowfullscreen>
                 </iframe>
             </div>
         </div>
