--- a/views/partials/navbar-sidebar.html
+++ b/views/partials/navbar-sidebar.html
@@ -8,7 +8,7 @@
                 <a href="/" id="nav_dash"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-wrench fa-fw"></i> Tools<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-wrench fa-fw"></i> Tools</a>
                 <ul class="nav nav-second-level">
                     <li>
                         <a href="#">Tool 1</a>
